# interflop-backend-verrou

./: Makefile.am  config.h  configure.ac  dietzfelbingerHash.hxx  interflop_verrou.cxx  interflop_verrou.h  mersenneHash.hxx  multiplyShiftHash.hxx  static_backends.hxx  tableHash.hxx  test_main.cxx  vr_isNan.hxx  vr_nextUlp.hxx  vr_op.hxx  vr_rand.h  vr_rand_implem.h  vr_roundingOp.hxx
